--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A CMS-style blog site, where developers can publish their blog posts and comment on other developers’ posts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "akravt1274",
   "license": "ISC",
